fixed wrap color issue

--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -46,6 +46,7 @@ html, body {
 }
 
 .home-buttons {
+    background-color: var(--gray);
     display: flex;
     flex-direction: row;
     justify-content: center;
